@@ -1,3 +1,14 @@
+2021-08-02  Nikita Vasilyev  <nvasilyev@apple.com>
+
+        Web Inspector: Network: sorting of transfer size for failed requests is causing the ordering to change every layout
+        https://bugs.webkit.org/show_bug.cgi?id=228712
+
+        Reviewed by Devin Rousso.
+
+        * UserInterface/Views/NetworkTableContentView.js:
+        (WI.NetworkTableContentView.prototype._generateSortComparator):
+        Don't change the item order when both values are NaN.
+
 2021-07-26  Qiaosong Zhou  <qiaosong_zhou@apple.com>
 
         FormDataEvent added. 
